[v.1.0.0] Update: Base code

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "transferlearning",
-  "version": "0.1.0",
+  "name": "transferlearing-web-app",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
-    "react-webcam": "^3.1.1"
+    "aws-amplify": "^1.1.40",
+    "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.5.2",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.4",
+    "react-stripe-elements": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,16 +21,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
