--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/knn-classifier": "^1.2.1",
+    "@tensorflow-models/mobilenet": "^2.0.4",
+    "@tensorflow/tfjs": "^1.3.0",
     "aws-amplify": "^1.1.40",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
@@ -10,7 +13,8 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
-    "react-stripe-elements": "^1.6.0"
+    "react-stripe-elements": "^1.6.0",
+    "react-webcam": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
