--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.0.0",
     "@tensorflow-models/knn-classifier": "^1.2.1",
     "@tensorflow-models/mobilenet": "^2.0.4",
     "@tensorflow/tfjs": "^1.3.0",
@@ -14,7 +15,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-stripe-elements": "^1.6.0",
-    "react-webcam": "^3.1.1"
+    "react-webcam": "^3.1.1",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
