--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
     "react-stripe-elements": "^1.6.0",
+    "streamsaver": "^2.0.3",
     "tfjsx": "^1.0.1"
   },
   "scripts": {
