--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4",
+    "react-spinners": "^0.6.1",
     "react-stripe-elements": "^1.6.0",
     "react-webcam": "^3.1.1",
+    "streamsaver": "^2.0.3",
     "sweetalert": "^2.1.2",
     "tfjs": "^0.6.0",
-    "streamsaver": "^2.0.3",
     "tfjsx": "^1.0.1"
   },
   "scripts": {
